--- a/assignment04/assignment04.ipynb
+++ b/assignment04/assignment04.ipynb
@@ -6,7 +6,7 @@
       "name": "assignment04",
       "provenance": [],
       "mount_file_id": "1oaDX0kVINTIvz2syA-sFYKG3KmOfn0yJ",
-      "authorship_tag": "ABX9TyMmvYbNqQVavkfC+bd+NC7N",
+      "authorship_tag": "ABX9TyNlz/RiAlAtxiy9hvfV5EnG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -113,8 +113,17 @@
         "\n",
         "data = np.genfromtxt(path, delimiter=',')\n",
         "\n",
+        "len_train=len(data)\n",
         "x_train = data[:,0:3]\n",
-        "y_train = data[-1]\n",
+        "y_train = []\n",
+        "\n",
+        "for i in range(len_train):\n",
+        "  temp=[data[i,3]]\n",
+        "  y_train.append(temp)\n",
+        "\n",
+        "\n",
+        "#y_train = []\n",
+        "#y_train.extend(data[:,-1])\n",
         "#num_data=len(x_data)"
       ],
       "execution_count": 0,
@@ -132,7 +141,7 @@
         "x_train=[]\n",
         "y_train=[]\n",
         "\n",
-        "with open('data_train.csv', newline='') as myfile:\n",
+        "with open('data_train1.csv', newline='') as myfile:\n",
         "    reader  = csv.reader(myfile, delimiter=',')\n",
         "    ct = 0\n",
         "    for i in reader:\n",
@@ -173,19 +182,19 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 54
         },
-        "outputId": "3254a1c2-dea8-43a6-e944-9ac068d0267d"
+        "outputId": "844587fc-729d-44f6-eee4-38acdebbfc1e"
       },
       "source": [
-        "print(len(x_train))"
+        "print(y_train)"
       ],
-      "execution_count": 139,
+      "execution_count": 160,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "300\n"
+            "[[73.57882491], [-56.41043334], [52.39076825], [-6.936295282], [-34.99701708], [-19.85473504], [4.669308903], [20.32729691], [-96.11724036], [29.87851202], [42.21994908], [88.95764271], [48.77575822], [66.50231593], [-6.167810257], [15.49724783], [31.88174211], [33.20844246], [45.45331174], [33.16918589], [122.9332583], [139.8214284], [35.40409479], [117.6010519], [50.15151245], [58.81526789], [120.2402209], [109.0756897], [97.70452838], [185.9658817], [95.01946318], [78.87463324], [67.30467176], [79.75809264], [74.10755613], [83.82484147], [178.7452964], [88.63800975], [140.7233757], [195.7750917], [79.67465512], [152.8342169], [167.4089796], [184.9774805], [95.67944538], [185.7527202], [157.9300179], [164.495182], [184.5727012], [198.4209711], [155.4338781], [205.6533577], [156.9214502], [87.02646629], [218.6138103], [117.4906202], [129.6419706], [228.3869208], [165.9197914], [226.0391029], [125.9014999], [138.1370929], [241.1751955], [191.1614704], [173.6399512], [231.5917726], [159.1753882], [191.8070872], [255.4315499], [179.7332008], [186.8720671], [177.3728626], [209.3320684], [246.8610433], [170.4646992], [187.845575], [274.8329237], [174.4177218], [240.4077805], [221.4041906], [297.1068513], [235.2419094], [242.9006318], [245.0093501], [268.5362168], [321.0044026], [213.339405], [245.6055367], [203.8732297], [255.3872496], [201.4368011], [346.6109352], [283.1638713], [348.3571567], [306.9467196], [339.9172642], [239.9895087], [235.7622575], [248.7755481], [321.8528858], [298.8268169], [321.2989212], [407.8238769], [323.001691], [308.8160434], [345.9930547], [307.7673656], [341.6514876], [397.6277478], [300.8130787], [272.1966795], [321.2102334], [350.0017484], [305.4960672], [310.6090451], [268.9009762], [412.3749375], [387.44709], [430.4922462], [404.6433263], [275.9830586], [423.7795052], [415.416281], [430.1776288], [318.6461501], [336.7358954], [369.7802248], [302.0409342], [338.2289269], [363.5366888], [362.0607153], [426.3951983], [408.9829283], [338.5810728], [367.3909347], [464.396016], [477.8126943], [385.2693669], [362.1218977], [376.2558147], [437.8607091], [419.7737974], [425.9456233], [436.8192629], [462.2294014], [428.4916852], [427.3431344], [507.9633121], [456.6912913], [441.599686], [486.1845916], [379.4366956], [465.3271978], [464.1351177], [446.869808], [437.5306369], [415.0429888], [397.1720694], [471.843181], [510.201686], [552.4386469], [486.2688689], [505.5194415], [484.1653283], [501.7533206], [505.4737089], [604.4325798], [461.0995907], [444.7404119], [559.2941673], [520.7242846], [543.9072836], [553.6994922], [551.8333173], [461.8460956], [544.3939896], [573.7590288], [615.6921426], [577.9939338], [455.7989479], [568.5642898], [528.2651095], [564.3582], [587.0374904], [592.2208136], [505.7192399], [478.634533], [547.7384896], [517.4349004], [609.4414521], [533.5033173], [529.3291738], [579.9701719], [616.4654746], [642.0063602], [543.6663905], [573.0138914], [523.2867682], [634.9228127], [643.657337], [579.804788], [541.4782321], [606.0257027], [574.6873055], [550.4120579], [668.2855657], [573.8306733], [662.5293484], [550.6930013], [673.3502675], [742.0935205], [647.6983031], [628.925692], [645.8158046], [679.8053966], [708.4642844], [612.0952518], [708.8301946], [650.9152057], [645.3587401], [607.512416], [741.6413627], [619.917922], [614.5931956], [583.9049321], [600.8043364], [648.9504069], [629.4605294], [589.9835024], [647.1951458], [767.9209838], [696.3445955], [716.3588574], [744.0683292], [667.8890911], [782.5946667], [733.6165452], [699.3215756], [672.3969329], [812.3579297], [810.5186074], [742.5811607], [690.8157235], [792.8549834], [722.50506], [660.9706429], [720.1478753], [759.9045832], [779.9920799], [768.9559873], [746.1756954], [759.6202999], [775.4439374], [686.4587503], [811.3214114], [731.0411282], [672.3823603], [790.6729259], [688.7313079], [856.524644], [828.3278566], [691.9491801], [813.4245464], [804.6069348], [792.4118351], [848.5432537], [790.1467346], [742.1669234], [858.3571464], [887.9895627], [897.9846562], [731.4324191], [769.4259547], [778.9679891], [858.4658364], [873.2744838], [836.166993], [924.1618473], [791.5785616], [784.4523544], [794.3132332], [811.9244066], [827.9097196], [882.9576542], [872.9565648], [813.955779], [953.389368], [872.5536019], [858.1899202], [852.3673555], [788.7655716], [924.2806504], [893.691376], [903.4537515], [925.1884699], [820.0715426], [861.0432159], [905.9716448], [884.3339032], [925.0197483]]\n"
           ],
           "name": "stdout"
         }
@@ -196,11 +205,7 @@
       "metadata": {
         "id": "VwjaXXPyhG40",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 446
-        },
-        "outputId": "04c5db49-f424-4bd8-ea47-c2d66fe55998"
+        "colab": {}
       },
       "source": [
         "theta1=tf.Variable(tf.random_normal([3,1],name='weight'))\n",
@@ -211,7 +216,7 @@
         "\n",
         "\n",
         "## hypothesis X*theta1+theta0\n",
-        "hypothesis= tf.matmul(theta1,X)+theta0\n",
+        "hypothesis= tf.matmul(X,theta1)+theta0\n",
         "\n",
         "## Cost/loss function\n",
         "cost= 0.5*tf.reduce_mean(tf.square(hypothesis-Y))\n",
@@ -229,27 +234,33 @@
         "for step in range(3001):\n",
         "    sess.run(train, feed_dict={X:x_train, Y:y_train})"
       ],
-      "execution_count": 144,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wb0JG-DgES3M",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "d649b78a-9679-4c96-e4f1-0d99ba7b6f4a"
+      },
+      "source": [
+        "print(sess.run(theta1))"
+      ],
+      "execution_count": 166,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/op_def_library.py\u001b[0m in \u001b[0;36m_apply_op_helper\u001b[0;34m(self, op_type_name, name, **keywords)\u001b[0m\n\u001b[1;32m    509\u001b[0m                 \u001b[0mas_ref\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minput_arg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_ref\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 510\u001b[0;31m                 preferred_dtype=default_dtype)\n\u001b[0m\u001b[1;32m    511\u001b[0m           \u001b[0;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/ops.py\u001b[0m in \u001b[0;36minternal_convert_to_tensor\u001b[0;34m(value, dtype, name, as_ref, preferred_dtype, ctx)\u001b[0m\n\u001b[1;32m   1145\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mret\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1146\u001b[0;31m       \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconversion_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mas_ref\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mas_ref\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1147\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/ops.py\u001b[0m in \u001b[0;36m_TensorTensorConversionFunction\u001b[0;34m(t, dtype, name, as_ref)\u001b[0m\n\u001b[1;32m    982\u001b[0m         \u001b[0;34m\"Tensor conversion requested dtype %s for Tensor with dtype %s: %r\"\u001b[0m \u001b[0;34m%\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 983\u001b[0;31m         (dtype.name, t.dtype.name, str(t)))\n\u001b[0m\u001b[1;32m    984\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: Tensor conversion requested dtype float32 for Tensor with dtype float64: 'Tensor(\"MatMul_11/b:0\", shape=(300, 3), dtype=float64)'",
-            "\nDuring handling of the above exception, another exception occurred:\n",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-144-f7bc6bb4dab4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m## hypothesis X*theta1+theta0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mhypothesis\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatmul\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtheta1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mtheta0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m## Cost/loss function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/math_ops.py\u001b[0m in \u001b[0;36mmatmul\u001b[0;34m(a, b, transpose_a, transpose_b, adjoint_a, adjoint_b, a_is_sparse, b_is_sparse, name)\u001b[0m\n\u001b[1;32m   2055\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2056\u001b[0m       return gen_math_ops.mat_mul(\n\u001b[0;32m-> 2057\u001b[0;31m           a, b, transpose_a=transpose_a, transpose_b=transpose_b, name=name)\n\u001b[0m\u001b[1;32m   2058\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2059\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/gen_math_ops.py\u001b[0m in \u001b[0;36mmat_mul\u001b[0;34m(a, b, transpose_a, transpose_b, name)\u001b[0m\n\u001b[1;32m   4558\u001b[0m     _, _, _op = _op_def_lib._apply_op_helper(\n\u001b[1;32m   4559\u001b[0m         \u001b[0;34m\"MatMul\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtranspose_a\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtranspose_a\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtranspose_b\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtranspose_b\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4560\u001b[0;31m         name=name)\n\u001b[0m\u001b[1;32m   4561\u001b[0m     \u001b[0m_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_op\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4562\u001b[0m     \u001b[0m_inputs_flat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_op\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/op_def_library.py\u001b[0m in \u001b[0;36m_apply_op_helper\u001b[0;34m(self, op_type_name, name, **keywords)\u001b[0m\n\u001b[1;32m    544\u001b[0m                   \u001b[0;34m\"%s type %s of argument '%s'.\"\u001b[0m \u001b[0;34m%\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    545\u001b[0m                   (prefix, dtypes.as_dtype(attrs[input_arg.type_attr]).name,\n\u001b[0;32m--> 546\u001b[0;31m                    inferred_from[input_arg.type_attr]))\n\u001b[0m\u001b[1;32m    547\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    548\u001b[0m           \u001b[0mtypes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: Input 'b' of 'MatMul' Op has type float64 that does not match type float32 of argument 'a'."
-          ]
+          "output_type": "stream",
+          "text": [
+            "[[nan]\n",
+            " [nan]\n",
+            " [nan]]\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
